Implemented Messaging module